# reto-oop

./: .gitignore  CMakeLists.txt  README.md  const.h  main  main.cpp  mydata.csv  run  series.csv  set_up.sh  utils.cpp  utils.h
clases/: Controller.cpp  Controller.h  Filters.cpp  Filters.h  Media.cpp  Media.h  Movies.cpp  Series.cpp  Series.h  User.cpp  User.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
